Add testing infrastructure and fix admin build issues
- Add test-extension.html for comprehensive extension testing
- Add test-urls.md with categorized test URLs and instructions
- Fix admin build issues by correcting vite config and HTML paths
- Exclude build artifacts and dependencies from git

--- a/backend/admin/index.html
+++ b/backend/admin/index.html
@@ -35,6 +35,6 @@
     <main>
       <div id="root"></div>
     </main>
-    <script type="module" src="/admin/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
