Add comprehensive phishing detection and admin filtering features
- Add lookalike domain detection with character shape comparison (rn≈m, l≈I≈1)
- Implement edit distance calculation for domain similarity (≤1 edit distance)
- Add high-trust domain allowlist for lookalike detection
- Enhance content script with cloud scoring API integration
- Add label filter dropdown (Safe/Caution/High Risk) to admin dashboard
- Add date range selector for filtering reports by timestamp
- Implement client-side filtering with visual feedback
- Add color-coded label pills for better risk visualization
- Update options page to support API URL configuration
- Fix TypeScript errors and improve code quality

--- a/extension/src/options/index.html
+++ b/extension/src/options/index.html
@@ -16,14 +16,14 @@
       <input type="number" id="minScore" min="0" max="100" value="20" />
     </div>
     <div class="row">
-  <label for="apiBase">API Base URL:</label>
-  <input type="text" id="apiBase" placeholder="https://your-api.example.com" />
+  <label for="apiBase">Scoring API URL:</label>
+  <input type="text" id="apiBase" placeholder="http://localhost:8080" />
 </div>
 <div class="row">
   <label for="tenantKey">Tenant Key:</label>
   <input type="text" id="tenantKey" placeholder="(optional)" />
 </div>
-<label><input type="checkbox" id="enableReporting" /> Enable “Report Suspicious”</label>
+<label><input type="checkbox" id="enableReporting" /> Enable "Report Suspicious" + Cloud Scoring</label>
 <button id="save">Save</button>
     <p id="status" class="status"></p>
   </main>
