--- a/backend/admin/index.html
+++ b/backend/admin/index.html
@@ -18,8 +18,13 @@
       th, td { text-align:left; padding: 8px; border-bottom: 1px solid #eee; font-size:14px; vertical-align: top;}
       th { color: var(--muted); font-weight: 600; }
       .pill { background:#eee; border-radius:999px; padding:2px 8px; font-size:12px; margin-right:6px; display:inline-block;}
-      .toolbar { display:flex; gap:10px; margin-bottom:10px; align-items:center;}
+      .pill.high-risk { background:#ffebee; color:#c62828; border:1px solid #ffcdd2; }
+      .pill.caution { background:#fff3e0; color:#ef6c00; border:1px solid #ffe0b2; }
+      .pill.safe { background:#e8f5e8; color:#2e7d32; border:1px solid #c8e6c9; }
+      .toolbar { display:flex; gap:10px; margin-bottom:10px; align-items:center; flex-wrap: wrap; }
       input[type="search"] { padding:8px 10px; border:1px solid #ddd; border-radius:8px; width:260px; }
+      input[type="date"] { padding:8px 10px; border:1px solid #ddd; border-radius:8px; }
+      select { padding:8px 10px; border:1px solid #ddd; border-radius:8px; background:#fff; }
       .btn { padding:6px 10px; border:1px solid #ddd; border-radius:8px; background:#fff; cursor:pointer;}
       .btn.primary { background: var(--accent); color:#fff; border-color: var(--accent); }
       .modal-backdrop { position:fixed; inset:0; background:rgba(0,0,0,.45); display:flex; align-items:center; justify-content:center;}
