Deploy PhishGuard backend to AWS Lambda and update extension for cloud integration
- Added AWS SAM deployment configuration
- Updated extension to use cloud API by default
- Fixed Lambda compatibility issues (removed local file operations)
- Added test script for API validation
- Updated requirements.txt with mangum dependency
- Extension now defaults to cloud API endpoint

--- a/extension/src/options/index.html
+++ b/extension/src/options/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="row">
   <label for="apiBase">Scoring API URL:</label>
-  <input type="text" id="apiBase" placeholder="http://localhost:8080" />
+  <input type="text" id="apiBase" placeholder="https://ysnpbaet5e.execute-api.us-east-1.amazonaws.com/Prod" />
 </div>
 <div class="row">
   <label for="tenantKey">Tenant Key:</label>
