FIX: Ensure default settings are properly applied on first load
- Fix default value logic to properly detect first-time users
- Add automatic saving of default settings to storage on first load
- Add Reset to Defaults button for easy restoration
- Improve logic to distinguish between no settings and false values
- Ensure enabled checkbox is ON, min score is 20, and API URL is set by default
- Fix issue where existing storage values were overriding defaults

--- a/extension/src/options/index.html
+++ b/extension/src/options/index.html
@@ -51,6 +51,7 @@
 
   <div class="row">
     <button id="save">Save</button>
+    <button id="reset" style="margin-left: 10px; padding: 8px 14px; border-radius: 8px; border: 1px solid #ccc; background: #f8f9fa; color: #333; cursor: pointer;">Reset to Defaults</button>
   </div>
 
   <div id="status" role="status" aria-live="polite"></div>
