--- a/extension/src/options/index.html
+++ b/extension/src/options/index.html
@@ -13,7 +13,7 @@
     .switch { display: flex; align-items: center; gap: 8px; }
     #save { padding: 8px 14px; border-radius: 8px; border: 0; background: #1a73e8; color: #fff; cursor: pointer; }
     #save:disabled { opacity: 0.6; cursor: not-allowed; }
-    #status { height: 20px; margin-top: 8px; color: #0a7a09; font-weight: 600; }
+    #status { min-height: 20px; margin-top: 8px; color: #0a7a09; font-weight: 600; }
     .status.success { background-color: #d4edda; color: #155724; border: 1px solid #c3e6cb; padding: 10px; border-radius: 5px; margin-top: 10px; }
     .status.error { background-color: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; padding: 10px; border-radius: 5px; margin-top: 10px; }
     .hint { color: #555; font-size: 12px; }
@@ -52,6 +52,7 @@
   <div class="row">
     <button id="save">Save</button>
     <button id="reset" style="margin-left: 10px; padding: 8px 14px; border-radius: 8px; border: 1px solid #ccc; background: #f8f9fa; color: #333; cursor: pointer;">Reset to Defaults</button>
+    <button id="testStatus" style="margin-left: 10px; padding: 8px 14px; border-radius: 8px; border: 1px solid #ccc; background: #f8f9fa; color: #333; cursor: pointer;">Test Status</button>
   </div>
 
   <div id="status" role="status" aria-live="polite"></div>
