FIX: Add type='module' to options script tag
- Fix 'Cannot use import statement outside a module' error
- Add type='module' to script tag in options HTML
- Enable ES6 import statements in compiled JavaScript
- Fix module loading issue that was preventing options page from working
- Ensure config.js imports work properly in options page

--- a/extension/src/options/index.html
+++ b/extension/src/options/index.html
@@ -59,7 +59,7 @@
   
   <p class="hint">Tip: after saving, reload your email tab to apply changes.</p>
 
-  <!-- Load the compiled JavaScript file -->
-  <script src="./options.js"></script>
+  <!-- Load the compiled JavaScript file as a module -->
+  <script type="module" src="./options.js"></script>
 </body>
 </html>
