Fix admin dashboard API URL: Update to use custom domain
- Updated API_BASE from placeholder to https://phishguard.cyphersway.com
- Resolves 'failed to fetch' error in admin dashboard
- Admin API endpoints now working correctly
- Dashboard can now fetch reports and summary data

--- a/backend/admin-dashboard.html
+++ b/backend/admin-dashboard.html
@@ -293,8 +293,8 @@
     </div>
 
     <script>
-        // Replace with your actual API Gateway URL
-        const API_BASE = 'https://YOUR_API_ID.execute-api.YOUR_REGION.amazonaws.com/Prod';
+        // Custom domain API URL
+        const API_BASE = 'https://phishguard.cyphersway.com';
         
         let allReports = [];
         let currentFilter = '';
